Bug 1112040 - Report invalid regular expressions to the console. r=bholley